# TaskManager

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  README.md  db.sqlite3  get_folders.py  pyproject.toml  pytest.ini  requirements.txt
fixtures/: data.json
task_manager/: settings.py  urls.py  wsgi.py
tasks/: admin.py  forms.py  models.py  urls.py  views.py
tasks/migrations/: 0001_initial.py  0002_task_total_planned_effort_task_total_time_fact.py  0003_alter_task_completed_at.py
templates/: base.html
templates/includes/: footer.html  header.html
templates/tasks/: base.html  sidebar.html  subtask_tree.html  task_confirm_delete.html  task_detail.html  task_form.html  task_list.html  task_tree_node.html
tests/: test_models.py  test_views.py
